GNOME Bugzilla – Bug 643170
gtk_file_chooser_set_filename does not work if "Show hidden files" is active
Last modified: 2011-10-26 23:28:50 UTC
Steps to Reproduce: Launch my small example (http://paste.ubuntu.com/571577/). If "Show hidden files" flag is not active, directory "/etc" will be selected in the file chooser dialog as expexted. If you set "Show hidden files" and than open file chooser dialog again, directory "etc" will not be selected. So, function "gtk_file_chooser_set_filename" does not work if "Show hidden files" flag in file chooser settings is active. The problem reproduces with Ubuntu 10.10 (GTK-2.22), Ubuntu 11.04 Alpha-2 and Gnome-3 Fedora LiveCD (GTK-2.24.0).
Created attachment 181868 [details] [review] [GtkFileChooser] Fix initial selection when hidden files are shown We were breaking prematurely out of the loop that goes through each file that is pending selection; not only does that loop disable filtering and show hidden files if needed, but it also selects the files themselves. So we need to walk the whole list of files. Signed-off-by: Federico Mena Quintero <federico@gnome.org>
Attachment 181868 [details] pushed as 6c4196e - [GtkFileChooser] Fix initial selection when hidden files are shown
Pushed to gtk-2-24 as well as master.
*** Bug 631914 has been marked as a duplicate of this bug. ***
*** Bug 615353 has been marked as a duplicate of this bug. ***